fix:add correct overflow for events

--- a/blocks/events/__card-title/events__card-title.css
+++ b/blocks/events/__card-title/events__card-title.css
@@ -6,4 +6,11 @@
     
     text-decoration: none;
     color: #3B3748;
+
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2; 
+           line-clamp: 2; 
+    -webkit-box-orient: vertical;
 }
